--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>AlenaBorya</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap&subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>AlenaBoryaPage</title>
 </head>
-<body>
-	<header>
-		
-	</header>
-	<main>
-		
+<body class="page">
+	<div class="page__header">
+		<header>
+			<!-- Главное меню сайта-->
+		</header>
+	</div>
+	<main class="page__content">
+		<!-- Основная страница -->
 	</main>
 </body>
 </html>
