--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 	<div class="page__header">
 		<header>
 			<!-- Главное меню сайта-->
+			<h1>Главная страница сайта</h1>
 		</header>
 	</div>
 	<main class="page__content">
 		<!-- Основная страница -->
+		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non laborum facilis animi labore consequatur similique, tempora ipsam iusto, modi pariatur quia nam? Ea quo in explicabo molestias sapiente necessitatibus?</p>
 	</main>
 </body>
 </html>
