Стилизовал page и page__header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 	</div>
 	<main class="page__content">
 		<!-- Основная страница -->
-		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non laborum facilis animi labore consequatur similique, tempora ipsam iusto, modi pariatur quia nam? Ea quo in explicabo molestias sapiente necessitatibus?</p>
+		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+			Fugiat non laborum facilis animi labore consequatur similique, 
+			tempora ipsam iusto, modi pariatur quia nam? Ea quo in explicabo 
+			molestias sapiente necessitatibus?</p>
 	</main>
 </body>
 </html>
